--- a/turma8/.vscode/settings.json
+++ b/turma8/.vscode/settings.json
@@ -7,5 +7,21 @@
         "**/.DS_Store": true,
         "**/Thumbs.db": true,
         "**/node_modules": true
-    }
+    },
+    "sqltools.connections": [
+        {
+            "mysqlOptions": {
+                "authProtocol": "default"
+            },
+            "previewLimit": 50,
+            "server": "localhost",
+            "port": 3306,
+            "driver": "MySQL",
+            "name": "mysql@localhost",
+            "group": "localhost",
+            "database": "maverik",
+            "username": "root",
+            "password": "root"
+        }
+    ]
 }
